fixed fbook connect

--- a/public/templates/accounts/facebook_button.html
+++ b/public/templates/accounts/facebook_button.html
@@ -1,7 +1,13 @@
-
-<form class="connect-button" name="login" method="post" action="{% if logged_in %}{% url facebook_connect %}{% else %}{% url facebook_login %}{% endif %}">
-{% if next %}
-    <input type="hidden" name="next" value="{{ next }}" />
-{% endif %}
-<input type="image" onclick="facebookConnect(this.form);return false;" src="http://static.ak.fbcdn.net/images/fbconnect/login-buttons/connect_light_large_long.gif" />
+{% load facebook_tags %}{% filter js_string %}
+<form class="connect-button" name="facebookconnect-login-form" id="facebookconnect-login-form" method="post" action="{% url facebook_login %}">
+    {% if next %}
+        <input type="hidden" name="next" value="{{ next }}" />
+    {% endif %}
+    
+    {% if not logged_in %}
+        <input type="image" onclick="facebookConnect(this.form);return false;" src="http://static.ak.fbcdn.net/images/fbconnect/login-buttons/connect_light_large_long.gif" />
+    {% else %}
+        <a href="{% url accounts_logout %}" onclick="FB.Connect.logoutAndRedirect('{% url accounts_logout %}');return false;">Logout</a>            
+    {% endif %}
 </form>
+{% endfilter %}
