started setting up the longform

--- a/public/templates/eats/new.html
+++ b/public/templates/eats/new.html
@@ -1,6 +1,6 @@
 <form action="/eats/new/" method="post">
-    {{ form.shorthand.errors }}
+    {{ shorthand_form.shorthand.errors }}
     <label for="shorthand">What did you eat?</label>
-    {{ form.shorthand }}
+    {{ shorthand_form.shorthand }}
 <input type="submit" value="IJAT!" />
 </form>
